--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "email": "muhammadhu.aiman@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.6.0",
         "symfony/console": "~3.2"
