--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.6.0",
-        "symfony/console": "~3.2"
+        "php": ">=7.1.3",
+        "symfony/console": ">=4.2"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.6.0"
+        "phpunit/phpunit": "~7.0"
     },
     "autoload": {
         "psr-4": {
