--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.1.3",
-        "symfony/console": ">=4.2"
+        "symfony/console": ">=4.2",
+        "jdorn/sql-formatter": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
