--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
-        "symfony/var-dumper": "^4.2",
-        "jdorn/sql-formatter": "^1.2"
+        "symfony/var-dumper": "^4.2"
     },
     "autoload": {
         "psr-4": {
